# bomberguy

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  TODO.org  aclocal.m4  bomberclone.nsi  config.h.in  configure  configure.ac  configure.in
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in
data/gfx/: Makefile.in
data/maps/: Makefile.in
data/music/: Makefile.in
data/pixmaps/: Makefile.am  Makefile.in
data/player/: Makefile.in
data/tileset/: Makefile.am  Makefile.in
include/: Makefile.in  basic.h  bomb.h  bomberclone.h  broadcast.h  gfx.h  keybinput.h  map.h  menu.h  menugui.h  network.h  ogcache-client.h  packets.h  player.h  single.h  sound.h  sysfunc.h  udp.h
src/: Makefile.am  Makefile.in  bomb.c  broadcast.c  configuration.c  field.c  flyingitems.c  font.c  game.c  gfx.c  gfxengine.c  gfxpixelimage.c  help.c  keyb.c  keybinput.c  main.c  map.c  mapmenu.c  menu.c  menubools.c  menubuttons.c  menuentrys.c  menuimages.c  menulabels.c  menulists.c  multiwait.c  netsrvlist.c  network.c  ogcache-client.c  packets.c  pkgcache.c  player.c  playerinput.c  playermenu.c  single.c  sound.c  special.c  sysfunc.c  tileset.c  udp.c
src/.deps/: bomb.Po  broadcast.Po  chat.Po  configuration.Po  debug.Po  field.Po  flyingitems.Po  font.Po  game.Po  gfx.Po  gfxengine.Po  gfxpixelimage.Po  help.Po  keyb.Po  keybinput.Po  main.Po  map.Po  mapmenu.Po  menu.Po  menubools.Po  menubuttons.Po  menuentrys.Po  menuimages.Po  menulabels.Po  menulists.Po  multiwait.Po  netmenu.Po  netsrvlist.Po  network.Po  ogcache-client.Po  (+11 more)
(+14 files in other folders)
